feat: Add branding assets, comprehensive documentation, and improve GitHub check status determination logic.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,9 +13,9 @@
 			<!-- Header -->
 			<header class="header">
 				<div class="user-section">
-					<span id="user-avatar" class="avatar avatar-emoji">👾</span>
+					<img id="user-avatar" class="avatar avatar-img" src="../icons/icon128.png" alt="Avatar">
 					<span id="user-name" class="user-name">
-						< Waiting for Human />
+						PR Pulse
 					</span>
 				</div>
 				<div class="header-actions">
