--- a/onboarding/onboarding.html
+++ b/onboarding/onboarding.html
@@ -216,7 +216,7 @@
 				</div>
 
 				<div class="button-group">
-					<button type="button" id="close-setup" class="btn btn-primary">Close This Tab</button>
+					<button type="button" id="close-setup" class="btn btn-primary">Open your PRs</button>
 				</div>
 			</div>
 		</div>
