fix: update settings to auto-refresh every 10 mins to avoid rate limit error.

--- a/onboarding/onboarding.html
+++ b/onboarding/onboarding.html
@@ -207,7 +207,7 @@
 					</div>
 					<div class="tip">
 						<span class="tip-icon">🔄</span>
-						<span>PRs are automatically refreshed every minute</span>
+						<span>PRs are automatically refreshed every 10 minutes</span>
 					</div>
 					<div class="tip">
 						<span class="tip-icon">⚙️</span>
